feat: add jwt auth and apply it to protect message and tenant api
