# api/dto/login_request.go
@@ -1,0 +1,6 @@
+package dto
+
+type LoginRequest struct {
+	UserID   string `json:"user_id"`
+	TenantID string `json:"tenant_id"`
+}
